test/domains/ferguson/assign-from-strided.good
assign-from-strided.chpl:7: error: assigning to a domain with strideKind.one from a domain with strideKind.negative without an explicit cast
