test/domains/ferguson/assign-from-strided.chpl
var D = {1..10};

var A:[D] int = D;

writeln(A);

D = {1..4 by 2};

writeln(A);
